kubernetes/staging/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    sidecar.istio.io/inject: "true"
  name: zone-density-model
  namespace: stagingv2
  labels:
    app: zone-density-model-staging
spec:
  gateways:
  - knative-serving/knative-local-gateway
  - kubeflow/kubeflow-gateway
  hosts:
  - zone-density-model.stagingv2.svc.cluster.local
  - zone-density-model.stagingv2.kubeflow.emeralds.ari-aidata.eu
  http:
  - headers:
      request:
        set:
          Host: zone-density-model-predictor-default.stagingv2.svc.cluster.local
    match:
    - authority:
        regex: ^zone-density-model\.stagingv2(\.svc(\.cluster\.local)?)?(?::\d{1,5})?$
      gateways:
      - knative-serving/knative-local-gateway
    - authority:
        regex: ^zone-density-model\.stagingv2\.kubeflow\.emeralds\.ari-aidata\.eu(?::\d{1,5})?$
      gateways:
      - kubeflow/kubeflow-gateway
    route:
    - destination:
        host: knative-local-gateway.istio-system.svc.cluster.local
        port:
          number: 80
      headers:
          response:
            add:
              request-type: model-inference
      weight: 100
